# --------------------------------------------------------------
#  sqlite3
#
#  provides:
#    sqlite3, LuaXml
# --------------------------------------------------------------
set(MODULE_NAME sqlite3)

# --------------------------------------------------------------
#  module
# --------------------------------------------------------------
add_custom_target(${MODULE_NAME} true)

# --------------------------------------------------------------
#  vendor
# --------------------------------------------------------------
add_subdirectory(vendor)

# --------------------------------------------------------------
#  install                                     
# --------------------------------------------------------------
install(DIRECTORY lib
  DESTINATION ${LUBYK_LIB}
)

